--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,67 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$zettabyte-challenge-primary: mat-palette($mat-indigo);
+$zettabyte-challenge-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$zettabyte-challenge-warn: mat-palette($mat-red);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$zettabyte-challenge-theme: mat-light-theme((
+  color: (
+    primary: $zettabyte-challenge-primary,
+    accent: $zettabyte-challenge-accent,
+    warn: $zettabyte-challenge-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($zettabyte-challenge-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+// To give container width
+.app-container {
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 0 10px;
+  box-sizing: border-box;
+
+  @media screen and (max-width: 1400px) and (min-width: 1280px) {
+      max-width: 1180px;
+  }
+
+  @media only screen and (max-width: 1280px) and (min-width: 599px) {
+    max-width: 85%;
+  }
+
+  @media screen and (max-width: 599px) {
+    max-width: 100%;
+    padding: 0;
+  }
+}
+
+
+.cursor {
+  cursor: pointer;
+}
